@@ -8,11 +8,11 @@
 
 package org.utbot.framework.plugin.api
 
+import org.utbot.common.FileUtil
 import org.utbot.common.isDefaultValue
 import org.utbot.common.withToStringThreadLocalReentrancyGuard
 import org.utbot.framework.UtSettings
-import org.utbot.framework.plugin.api.impl.FieldIdReflectionStrategy
-import org.utbot.framework.plugin.api.impl.FieldIdSootStrategy
+import org.utbot.framework.plugin.api.util.ModifierFactory
 import org.utbot.framework.plugin.api.util.booleanClassId
 import org.utbot.framework.plugin.api.util.byteClassId
 import org.utbot.framework.plugin.api.util.charClassId
@@ -24,7 +24,10 @@ import org.utbot.framework.plugin.api.util.id
 import org.utbot.framework.plugin.api.util.intClassId
 import org.utbot.framework.plugin.api.util.isArray
 import org.utbot.framework.plugin.api.util.isPrimitive
+import org.utbot.framework.plugin.api.util.isStatic
 import org.utbot.framework.plugin.api.util.jClass
+import org.utbot.framework.plugin.api.util.jField
+import org.utbot.framework.plugin.api.util.kClass
 import org.utbot.framework.plugin.api.util.longClassId
 import org.utbot.framework.plugin.api.util.method
 import org.utbot.framework.plugin.api.util.primitiveTypeJvmNameOrNull
@@ -33,14 +36,24 @@ import org.utbot.framework.plugin.api.util.shortClassId
 import org.utbot.framework.plugin.api.util.supertypeOfAnonymousClass
 import org.utbot.framework.plugin.api.util.toReferenceTypeBytecodeSignature
 import org.utbot.framework.plugin.api.util.voidClassId
-import soot.*
+import soot.ArrayType
+import soot.BooleanType
+import soot.ByteType
+import soot.CharType
+import soot.DoubleType
+import soot.FloatType
+import soot.IntType
+import soot.LongType
+import soot.RefType
+import soot.ShortType
+import soot.SootClass
+import soot.Type
+import soot.VoidType
 import soot.jimple.JimpleBody
 import soot.jimple.Stmt
 import java.io.File
-import java.lang.reflect.Modifier
 import kotlin.contracts.ExperimentalContracts
 import kotlin.contracts.contract
-import org.utbot.common.FileUtil
 
 const val SYMBOLIC_NULL_ADDR: Int = 0
 
@@ -730,6 +743,8 @@ open class ClassId @JvmOverloads constructor(
     // Treat simple class ids as non-nullable
     open val isNullable: Boolean = false
 ) {
+    open val modifiers: Int
+        get() = jClass.modifiers
 
     open val canonicalName: String
         get() = jClass.canonicalName ?: error("ClassId $name does not have canonical name")
@@ -764,27 +779,6 @@ open class ClassId @JvmOverloads constructor(
     open val isInDefaultPackage: Boolean
         get() = packageName.isEmpty()
 
-    open val isPublic: Boolean
-        get() = Modifier.isPublic(jClass.modifiers)
-
-    open val isProtected: Boolean
-        get() = Modifier.isProtected(jClass.modifiers)
-
-    open val isPrivate: Boolean
-        get() = Modifier.isPrivate(jClass.modifiers)
-
-    val isPackagePrivate: Boolean
-        get() = !(isPublic || isProtected || isPrivate)
-
-    open val isFinal: Boolean
-        get() = Modifier.isFinal(jClass.modifiers)
-
-    open val isStatic: Boolean
-        get() = Modifier.isStatic(jClass.modifiers)
-
-    open val isAbstract: Boolean
-        get() = Modifier.isAbstract(jClass.modifiers)
-
     open val isAnonymous: Boolean
         get() = jClass.isAnonymousClass
 
@@ -799,6 +793,9 @@ open class ClassId @JvmOverloads constructor(
 
     open val isSynthetic: Boolean
         get() = jClass.isSynthetic
+
+    open val isKotlinObject: Boolean
+        get() = kClass.objectInstance != null
 
     /**
      * Collects all declared methods (including private and protected) from class and all its superclasses to sequence
@@ -875,24 +872,26 @@ open class ClassId @JvmOverloads constructor(
  * (it is important because name for nested classes contains $ as a delimiter between nested and outer classes)
  */
 class BuiltinClassId(
-    name: String,
     elementClassId: ClassId? = null,
     override val canonicalName: String,
     override val simpleName: String,
+    // set name manually only if it differs from canonical (e.g. for nested classes)
+    name: String = canonicalName,
     // by default, we assume that the class is not a member class
     override val simpleNameWithEnclosings: String = simpleName,
     override val isNullable: Boolean = false,
-    override val isPublic: Boolean = true,
-    override val isProtected: Boolean = false,
-    override val isPrivate: Boolean = false,
-    override val isFinal: Boolean = false,
-    override val isStatic: Boolean = false,
-    override val isAbstract: Boolean = false,
+    isPublic: Boolean = true,
+    isProtected: Boolean = false,
+    isPrivate: Boolean = false,
+    isFinal: Boolean = false,
+    isStatic: Boolean = false,
+    isAbstract: Boolean = false,
     override val isAnonymous: Boolean = false,
     override val isLocal: Boolean = false,
     override val isInner: Boolean = false,
     override val isNested: Boolean = false,
     override val isSynthetic: Boolean = false,
+    override val isKotlinObject: Boolean = false,
     override val typeParameters: TypeParameters = TypeParameters(),
     override val allMethods: Sequence<MethodId> = emptySequence(),
     override val allConstructors: Sequence<ConstructorId> = emptySequence(),
@@ -906,7 +905,20 @@ class BuiltinClassId(
             -1, 0 -> ""
             else -> canonicalName.substring(0, index)
         },
-) : ClassId(name = name, isNullable = isNullable, elementClassId = elementClassId) {
+) : ClassId(
+    name = name,
+    elementClassId = elementClassId,
+    isNullable = isNullable,
+) {
+    override val modifiers: Int = ModifierFactory {
+        public = isPublic
+        protected = isProtected
+        private = isPrivate
+        final = isFinal
+        static = isStatic
+        abstract = isAbstract
+    }
+
     init {
         BUILTIN_CLASSES_BY_NAMES[name] = this
     }
@@ -925,49 +937,20 @@ class BuiltinClassId(
     }
 }
 
-enum class FieldIdStrategyValues {
-    Reflection,
-    Soot
-}
-
 /**
  * Field id. Contains field name.
  *
  * Created to avoid usage String objects as a key.
  */
 open class FieldId(val declaringClass: ClassId, val name: String) {
-
-    object Strategy {
-        var value: FieldIdStrategyValues = FieldIdStrategyValues.Soot
-    }
-
-    private val strategy
-        get() = if (Strategy.value == FieldIdStrategyValues.Soot)
-            FieldIdSootStrategy(declaringClass, this) else FieldIdReflectionStrategy(this)
-
-    open val isPublic: Boolean
-        get() = strategy.isPublic
-
-    open val isProtected: Boolean
-        get() = strategy.isProtected
-
-    open val isPrivate: Boolean
-        get() = strategy.isPrivate
-
-    open val isPackagePrivate: Boolean
-        get() = strategy.isPackagePrivate
-
-    open val isFinal: Boolean
-        get() = strategy.isFinal
-
-    open val isStatic: Boolean
-        get() = strategy.isStatic
+    open val modifiers: Int
+        get() = jField.modifiers
 
     open val isSynthetic: Boolean
-        get() = strategy.isSynthetic
+        get() = jField.isSynthetic
 
     open val type: ClassId
-        get() = strategy.type
+        get() = jField.type.id
 
     override fun equals(other: Any?): Boolean {
         if (this === other) return true
@@ -990,16 +973,6 @@ open class FieldId(val declaringClass: ClassId, val name: String) {
     override fun toString() = safeJField?.toString() ?: "[unresolved] $declaringClass.$name"
 }
 
-inline fun <T> withReflection(block: () -> T): T {
-    val prevStrategy = FieldId.Strategy.value
-    try {
-        FieldId.Strategy.value = FieldIdStrategyValues.Reflection
-        return block()
-    } finally {
-        FieldId.Strategy.value = prevStrategy
-    }
-}
-
 /**
  * The same as [FieldId], except it represents the fields
  * of classes that may not be present on the classpath.
@@ -1013,11 +986,18 @@ class BuiltinFieldId(
     name: String,
     override val type: ClassId,
     // by default we assume that the builtin field is public and non-final
-    override val isPublic: Boolean = true,
-    override val isPrivate: Boolean = false,
-    override val isFinal: Boolean = false,
+    isPublic: Boolean = true,
+    isPrivate: Boolean = false,
+    isFinal: Boolean = false,
     override val isSynthetic: Boolean = false,
-) : FieldId(declaringClass, name)
+) : FieldId(declaringClass, name) {
+    override val modifiers = ModifierFactory {
+        public = isPublic
+        private = isPrivate
+        final = isFinal
+    }
+
+}
 
 sealed class StatementId {
     abstract val classId: ClassId
@@ -1049,16 +1029,15 @@ sealed class ExecutableId : StatementId() {
             return "$name($args)$retType"
         }
 
+    fun describesSameMethodAs(other: ExecutableId): Boolean {
+        return classId == other.classId && signature == other.signature
+    }
+
     override fun equals(other: Any?): Boolean {
         if (this === other) return true
         if (javaClass != other?.javaClass) return false
 
-        other as ExecutableId
-
-        if (classId != other.classId) return false
-        if (signature != other.signature) return false
-
-        return true
+        return describesSameMethodAs(other as ExecutableId)
     }
 
     override fun hashCode(): Int {
@@ -1109,11 +1088,12 @@ class BuiltinMethodId(
     isProtected: Boolean = false,
     isPrivate: Boolean = false
 ) : MethodId(classId, name, returnType, parameters) {
-    override val modifiers: Int =
-        (if (isStatic) Modifier.STATIC else 0) or
-            (if (isPublic) Modifier.PUBLIC else 0) or
-            (if (isProtected) Modifier.PROTECTED else 0) or
-            (if (isPrivate) Modifier.PRIVATE else 0)
+    override val modifiers: Int = ModifierFactory {
+        static = isStatic
+        public = isPublic
+        private = isPrivate
+        protected = isProtected
+    }
 }
 
 class BuiltinConstructorId(
@@ -1124,10 +1104,11 @@ class BuiltinConstructorId(
     isProtected: Boolean = false,
     isPrivate: Boolean = false
 ) : ConstructorId(classId, parameters) {
-    override val modifiers: Int =
-        (if (isPublic) Modifier.PUBLIC else 0) or
-            (if (isProtected) Modifier.PROTECTED else 0) or
-            (if (isPrivate) Modifier.PRIVATE else 0)
+    override val modifiers: Int = ModifierFactory {
+        public = isPublic
+        private = isPrivate
+        protected = isProtected
+    }
 }
 
 open class TypeParameters(val parameters: List<ClassId> = emptyList())
@@ -1135,7 +1116,7 @@ open class TypeParameters(val parameters: List<ClassId> = emptyList())
 class WildcardTypeParameter : TypeParameters(emptyList())
 
 interface CodeGenerationSettingItem {
-    val id : String
+    val id: String
     val displayName: String
     val description: String
 }
@@ -1148,7 +1129,7 @@ interface CodeGenerationSettingBox {
 }
 
 enum class MockStrategyApi(
-    override val id : String,
+    override val id: String,
     override val displayName: String,
     override val description: String
 ) : CodeGenerationSettingItem {
@@ -1175,7 +1156,7 @@ enum class MockStrategyApi(
 }
 
 enum class TreatOverflowAsError(
-    override val id : String,
+    override val id: String,
     override val displayName: String,
     override val description: String,
 ) : CodeGenerationSettingItem {
@@ -1293,10 +1274,13 @@ enum class CodegenLanguage(
             JAVA -> listOf(
                 "-d", buildDirectory,
                 "-cp", classPath,
-                "-XDignore.symbol.file" // to let javac use classes from rt.jar
+                "-XDignore.symbol.file", // to let javac use classes from rt.jar
+                "--add-exports", "java.base/sun.reflect.generics.repository=ALL-UNNAMED",
+                "--add-exports", "java.base/sun.text=ALL-UNNAMED",
             ).plus(sourcesFiles)
 
-            KOTLIN -> listOf("-d", buildDirectory, "-jvm-target", jvmTarget, "-cp", classPath).plus(sourcesFiles)
+            // TODO: -Xskip-prerelease-check is needed to handle #1262, check if this is good enough solution
+            KOTLIN -> listOf("-d", buildDirectory, "-jvm-target", jvmTarget, "-cp", classPath, "-Xskip-prerelease-check").plus(sourcesFiles)
         }
         if (this == KOTLIN && System.getenv("KOTLIN_HOME") == null) {
             throw RuntimeException("'KOTLIN_HOME' environment variable is not defined. Standard location is {IDEA installation dir}/plugins/Kotlin/kotlinc")
@@ -1312,6 +1296,8 @@ enum class CodegenLanguage(
         override val allItems: List<CodegenLanguage> = values().toList()
     }
 }
+//TODO #1279
+fun CodegenLanguage?.isSummarizationCompatible() = this == CodegenLanguage.JAVA
 
 // https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html#commandlineargfile
 fun isolateCommandLineArgumentsToArgumentFile(arguments: List<String>): String {
